@@ -22,3 +22,21 @@ shared 'a Tyrant structure (no transactions)' do
   end
 end
 
+shared 'a Tyrant structure (copy method)' do
+
+  it 'should accept #copy calls' do
+
+    SOURCE = 'tmp/tyrant.tch'
+
+    TARGET = File.expand_path(
+      File.join(File.dirname(__FILE__), '../tmp/tyrant_copy.tch'))
+
+    @db.copy(TARGET)
+
+    File.exist?(TARGET).should.be.true
+    File.stat(TARGET).size.should.equal(File.stat(SOURCE).size)
+
+    FileUtils.rm(TARGET)
+  end
+end
+
