@@ -23,6 +23,8 @@
           not being supported (Edo and Tokyo)
 - added : can set built-in or custom comparison functions for b-tree databases
           (Edo interface only)
+- todo  : reenabled #copy for Tyrant (Edo and Tokyo)
+
 
 == rufus-tokyo - 1.0.1    released 2009/09/18
 
